# lilac

./: .gitignore  Makefile  ext-build.sh
CMake/: Macros.cmake
CMake/cime/: CMakeLists.txt
CMake/ctsm/: CMakeLists.txt
CMake/timing/: CMakeLists.txt
demo_driver/: Makefile  batch.sub  demo_driver.F90
lilac/: Makefile  demo_driver.F90  lilac_atmcap.F90  lilac_cpl.F90  lilac_mod.F90  lilac_utils.F90
scripts/lib/CIME/: case_st_archive.py  utils.py
src/drivers/mct/cime_config/: buildnml
